--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@uploadthing/react": "^6.5.4",
@@ -28,6 +29,7 @@
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "next-themes": "^0.3.0",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
     "react-day-picker": "^8.10.1",
@@ -42,6 +44,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18",
